--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
 			rgb(223, 223, 223) 4
 			rgb(205, 205, 205) 3
 			*/
-			//http://www.sejm.gov.pl/Sejm9.nsf/posel.xsp?id=003&type=A
+			//http://www.sejm.gov.pl/Sejm10.nsf/posel.xsp?id=003&type=A
 			for (i=1; i<=24; i++){
-			popupList  = popupList  +'<div class = "tooltip" style="float: left"><div style="text-align: center; font-size: 8px; width:  40px; margin-top: 2px;">'+i+'</div><div  class = "pLogo" style=" width:  38px; padding: 0px 1px 0px 1px; font-size: 8px">'+(feature.properties['Sejm_2023_L_mandat'] >=i ?'<a href = "http://www.sejm.gov.pl/'+(feature.properties['PnP_Z'+i]!== null ?'' : '')+'" target="_blank"><img src="images/'+(feature.properties['Mandaty_kol_P' + i]!== null ? Autolinker.link(String(feature.properties['Mandaty_kol_P' + i])) : '')+'.jpg" alt ="I'+i+'"  class="Logo3"></a>':'\
+			popupList  = popupList  +'<div class = "tooltip" style="float: left"><div style="text-align: center; font-size: 8px; width:  40px; margin-top: 2px;">'+i+'</div><div  class = "pLogo" style=" width:  38px; padding: 0px 1px 0px 1px; font-size: 8px">'+(feature.properties['Sejm_2023_L_mandat'] >=i ?'<a href = "http://www.sejm.gov.pl/Sejm10.nsf/posel.xsp?id='+(feature.properties['PnP_Z'+i]!== null ?lengthToZerous(feature.properties['PnP_Z'+i]) : '')+'&type=A" target="_blank"><img src="images/'+(feature.properties['Mandaty_kol_P' + i]!== null ? Autolinker.link(String(feature.properties['Mandaty_kol_P' + i])) : '')+'.jpg" alt ="I'+i+'"  class="Logo3"></a>':'\
 			<img src="images/'+(feature.properties['Mandaty_kol_P' + i]!== null ? Autolinker.link(String(feature.properties['Mandaty_kol_P' + i])) : '')+'.jpg" alt ="I'+i+'"  class="Logo4" style="border: 2px solid #bbbbbb; margin: 1px;filter: contrast(88%);">')+'\
 			<div class="tooltiptext"' + (feature.properties['Sejm_2023_L_mandat'] < i ? ' style="background-color: #878787;"' : '') + '>\
 			<table class="pop_tab" '+(feature.properties['Sejm_2023_L_mandat'] < i ? ' style="border-color: #878787;"' : '')+'>\
 			<tr>\
-				<td '+(feature.properties['Sejm_2023_L_mandat'] < i ? ' style="background-color: rgb(223, 223, 223);"' : '')+'>Imiona i&nbsp;nazwisko:</td>\
+				<td '+(feature.properties['Sejm_2023_L_mandat'] < i ? ' style="background-color: rgb(223, 223, 223);"' : '')+'>'+(feature.properties['Sejm_2023_L_mandat'] >= i ? '<div class="deputyMiniPhoto" style="background-position: '+(feature.properties['PnP_Z'+i]-1)%20*-60+'px ' + (Math.floor((feature.properties['PnP_Z'+i]-1)/20 )*-72)+ 'px" ></div>':'Nazwisko i&nbsp;imiona:')+'</td>\
 				<td '+(feature.properties['Sejm_2023_L_mandat'] < i ? ' style="background-color: rgb(250, 244, 241); color: #444; font-weight: bold;"' : '')+'>'+(feature.properties['PnP_M'+i]!== null ? Autolinker.link(String(feature.properties['PnP_M'+i])) : '')+'</td>\
 			</tr>\
 			<tr >\
@@ -284,7 +284,7 @@
 			/*var popupList = '<h4>Kolejność przydzielonych mandatów:</h4>' + (for (i=1; i<=12; i++)Autolinker.link(String('<div style="float: left"><img src="images/'+i+'.jpg" alt ="P1"  class="Logo3"/></div>')))+'<div style="clear: both">';*/
 			/*var tempus = 1;
 			console.log("Bla " + feature.properties['Sejm_2023_dmm'+tempus]);*/
-            var popupContent = ' <h3>' + 'Okręg wyborczy nr ' + (feature.properties['jpt_kod_je'] !== null ? Autolinker.link(String(feature.properties['jpt_kod_je'])) : '') + '</h3>\
+            var popupContent = ' <h3>' + 'Okręg wyborczy nr ' + (feature.properties['Okr'] !== null ? Autolinker.link(String(feature.properties['Okr'])) : '') + '</h3>\
                     <p style="line-height: 1.6">\
                         Oddano <span style="color: #444; font-weight: bold;">' + (feature.properties['Sejm_2023_SUMA'] !== null ? numberWithSpaces(feature.properties['Sejm_2023_SUMA']) : '') + '</span> głosów ważnych.<br>Obsadzono <span style="color: #444; font-weight: bold;">' + (feature.properties['Sejm_2023_L_mandat'] !== null ? Autolinker.link(String(numberWithSpaces(feature.properties['Sejm_2023_L_mandat']))) : '') + '</span>  mandatów.</p>\
 						<div id = "divScrolled" style="width: 576px; height: 336px; margin-top: -12px; overflow-x: hidden; padding: 4px; background-color: #ddffdd80; border: 4px solid #e4f4d480; border-radius: 16px; box-shadow: inset 0 1px 8px rgba(0,80,0,0.16), 0 1px 8px rgba(96,168,96,0.16);">\
@@ -544,7 +544,7 @@
 		function pop_Okregi_KO(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td style="font-weight: bold;">' + 'Okręg wyborczy nr ' + (feature.properties['jpt_kod_je'] !== null ? Autolinker.link(String(feature.properties['jpt_kod_je'])) : '') + '</td>\
+                        <td style="font-weight: bold;">' + 'Okręg wyborczy nr ' + (feature.properties['Okr'] !== null ? Autolinker.link(String(feature.properties['Okr'])) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Sejm_2023_L_mandat'] !== null ? Autolinker.link(String(feature.properties['Sejm_2023_L_mandat'])) : '') + '</td>\
@@ -1025,7 +1025,7 @@
 			for (i=0; i<24; i++){
 				p.index.push(p['PnP_M'+Number(i+1)]);
 			}
-			layers[p.jpt_kod_je] = layer;
+			layers[p.Okr] = layer;
         });
 		console.log(layer_Okregi_0);
 			/*'<img src="legend/KO.png" alt="KO"   class="Logo"/> KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA PO .N IPL ZIELONI': layer_Okregi_KO,
@@ -1160,7 +1160,7 @@
 			buildTip: function(text, val) {
 					  var p = val.layer.feature.properties;
 					  var tip = p.Kandydaci;
-					  var vip = p.jpt_kod_je;
+					  var vip = p.Okr;
 					  return '<a href="#" class=""><div style="width: auto; height: auto;"><b>Okręg wyborczy nr  ' +  vip + '</b><br>Kolejność obsadzania mandatów:<br>'+tip+'</div></a>';
 			},
 			moveToLocation: function(latlng, title, map) {
@@ -1174,7 +1174,7 @@
 		
 			
 			map.closePopup();
-			current_KOD = e.layer.feature.properties.jpt_kod_je;
+			current_KOD = e.layer.feature.properties.Okr;
 			//map.removeLayer(this._markerSearch)
 			e.layer.setStyle({color: 'rgba(255,255,255,0.5)', weight: '8', lineCap: 'round', lineJoin: 'round',fillColor: 'rgba(255,0,0,0.9)',});
 			//e.layer.bringToFront();
@@ -1208,7 +1208,7 @@
 				
 				layer.feature.properties.Kandydaci = kand_text.join("");
 				kand_text = [];
-				layers[layer.feature.properties.jpt_kod_je] = layer;
+				layers[layer.feature.properties.Okr] = layer;
 			});
 			searchControl.on('search:collapsed', function(e) {
 
@@ -1223,7 +1223,7 @@
 			/*console.log("Przed: "+sc);
 			sc = sc_temp;
 			console.log("Po: "+sc);*/
-			current_KOD = e.popup._source.feature.properties.jpt_kod_je;
+			current_KOD = e.popup._source.feature.properties.Okr;
 			setTimeout(function () {
 				if (document.readyState !== 'loading') {
 					console.log('document is already ready, just execute code here');
